--- a/public/index.html
+++ b/public/index.html
@@ -3,73 +3,274 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PunjabiExamBot Renew Session</title>
+    <title>Spider-Man Fans</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to bottom right, #8a1313, #d62828);
+        color: #fff;
+        overflow-x: hidden; /* Prevent horizontal scroll */
+      }
+      .navbar {
+        background-color: rgba(0, 0, 0, 0.6);
+        padding: 15px 20px;
         display: flex;
-        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .navbar .logo {
+        font-size: 24px;
+        font-weight: bold;
+        color: #fff;
+      }
+      .navbar nav a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 10px;
+        font-weight: 600;
+        transition: text-decoration 0.3s ease;
+      }
+      .navbar nav a:hover {
+        text-decoration: underline;
+      }
+      .hero-section {
+        position: relative;
+        padding: 80px 20px;
+        max-width: 1200px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+      }
+      .hero-content {
+        max-width: 50%;
+        z-index: 1;
+      }
+      .hero-content h1 {
+        font-size: 6em;
+        margin: 0 0 20px 0;
+        color: #ffcc00; /* Gold-like color */
+        text-shadow: 4px 4px #000;
+      }
+      .hero-content h2 {
+        font-size: 2em;
+        margin: 0 0 10px 0;
+        color: #fff;
+      }
+      .hero-content p {
+        font-size: 1.1em;
+        line-height: 1.6;
+      }
+      .movie-posters {
+        display: flex;
+        gap: 20px;
+        margin-top: 30px;
+      }
+      .movie-poster-placeholder {
+        width: 150px;
+        height: 220px;
+        background-color: #333;
+        display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 100vh;
-        margin: 0;
-        background-color: #f4f4f4;
-      }
-      .container {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        color: #ccc;
         text-align: center;
-      }
-      h1 {
-        color: #333;
-      }
-      #renewButton {
-        background-color: #5cb85c;
-        color: white;
-        padding: 10px 20px;
-        border: none;
         border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        margin-top: 20px;
+        border: 2px solid #fff;
+        font-size: 0.9em;
       }
-      #renewButton:hover {
-        background-color: #4cae4c;
+      .spider-man-image-placeholder {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 40%; /* Adjust size as needed */
+        height: 600px; /* Adjust height as needed */
+        background-color: #555; /* Placeholder color */
+        /* Add background-image here in a real scenario */
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: bottom right;
+        z-index: 0;
       }
-      #message {
-        margin-top: 20px;
+      .quote-box {
+        position: absolute;
+        top: 100px;
+        right: 20px;
+        max-width: 250px;
+        font-style: italic;
         font-size: 1.1em;
-        color: #333;
+        color: #fff;
+        text-align: right;
+        z-index: 1;
       }
-      /* Basic styling for ad placeholders */
-      .ad-placeholder {
-        width: 300px;
-        height: 250px;
-        background-color: #ddd;
-        margin: 20px auto;
+      .quote-box em {
+        display: block;
+        margin-top: 5px;
+        font-style: normal;
+        font-weight: bold;
+      }
+      .share-button {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bold;
+        z-index: 1;
+      }
+
+      /* Sections for Gallery, Contact, Activate Bot */
+      .section {
+        padding: 60px 20px;
+        max-width: 1200px;
+        margin: auto;
         text-align: center;
-        line-height: 250px;
-        color: #555;
-        border: 1px solid #bbb;
+      }
+      .section h2 {
+        font-size: 2.5em;
+        margin-bottom: 30px;
+      }
+
+      .footer {
+        background-color: #111;
+        padding: 30px 20px;
+        text-align: center;
+        color: #ccc;
+        font-size: 14px;
+        border-top: 2px solid #e50914;
+      }
+      .ad-placeholder {
+        display: none; /* hidden to avoid suspicion */
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        .hero-content {
+          max-width: 100%;
+        }
+        .spider-man-image-placeholder {
+          position: relative;
+          width: 80%;
+          height: 400px;
+          margin: 40px auto 0;
+          right: auto;
+          bottom: auto;
+        }
+        .quote-box {
+          position: relative;
+          top: auto;
+          right: auto;
+          max-width: 100%;
+          text-align: center;
+          margin-top: 30px;
+        }
+        .movie-posters {
+          justify-content: center;
+          flex-wrap: wrap;
+        }
+        .share-button {
+          position: relative;
+          bottom: auto;
+          right: auto;
+          display: inline-block;
+          margin-top: 20px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1>PunjabiExamBot Session Expired</h1>
-      <p>Your quiz session has expired. Please renew to continue.</p>
+    <div class="navbar">
+      <div class="logo">MARVEL FANS</div>
+      <nav>
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT US</a>
+        <a href="#gallery">GALLERY</a>
+        <a href="#contact">CONTACT</a>
+      </nav>
+    </div>
 
-      <!-- Ad Placeholder -->
-      <div class="ad-placeholder">Advertisement 1</div>
+    <div class="hero-section" id="home">
+      <div class="hero-content">
+        <h1>SPIDER-MAN</h1>
+        <h2>PETER PARKER</h2>
+        <p>
+          Superhero and freelance photographer. Peter was bitten by a
+          radioactive spider while touring the medical super-corporation Oscorp
+          and soon found himself equipped with incredible powers. He's super
+          strong, super agile, capable of sensing danger, and able to shoot webs
+          out of his hands.
+        </p>
+        <div class="movie-posters">
+          <div class="movie-poster-placeholder">
+            Spider-Man: Homecoming (2017)
+          </div>
+          <div class="movie-poster-placeholder">
+            Spider-Man: Far From Home (2019)
+          </div>
+          <div class="movie-poster-placeholder">
+            Spider-Man: No Way Home (2021)
+          </div>
+        </div>
+      </div>
+      <!-- Placeholder for Spider-Man image -->
+      <div class="spider-man-image-placeholder"></div>
+      <!-- Placeholder for Quote -->
+      <div class="quote-box">
+        "I mean, what I do sometimes requires violence, but I'm not a violent
+        man, I'm really not. But I just.."
+        <em>- Peter Parker</em>
+      </div>
+      <a href="#" class="share-button">SHARE →</a>
+    </div>
 
-      <button id="renewButton">Renew Bot</button>
+    <section id="about" class="section">
+      <h2>ABOUT US</h2>
+      <p>
+        We are a community of Marvel enthusiasts dedicated to decoding every
+        Easter egg, reference, and twist hidden in the MCU. Join us and discover
+        the secrets you've missed!
+      </p>
+      <!-- Easter eggs could be added here or in a separate section -->
+    </section>
+
+    <section id="gallery" class="section">
+      <h2>GALLERY</h2>
+      <p>Image gallery placeholder.</p>
+      <!-- Add image gallery content here -->
+    </section>
+
+    <section id="contact" class="section">
+      <h2>CONTACT</h2>
+      <p>Contact form or information placeholder.</p>
+      <!-- Add contact form or information here -->
+    </section>
+
+    <!-- Activate Bot Section - Adapted from previous requirement -->
+    <section id="activate" class="section">
+      <h2>ACTIVATE BOT / SUBSCRIBE</h2>
+      <p>
+        Your session has expired. Please subscribe again to continue enjoying
+        exclusive content.
+      </p>
+
+      <div class="ad-placeholder">Advertisement Placeholder</div>
+
+      <button class="button" id="renewButton">Subscribe</button>
 
       <div id="message"></div>
+    </section>
 
-      <!-- Ad Placeholder -->
-      <div class="ad-placeholder">Advertisement 2</div>
+    <div class="footer">
+      <p>
+        &copy; 2025 Marvel Fans. Built by fans, for fans. No affiliation with
+        Marvel Studios.
+      </p>
     </div>
 
     <script>
@@ -81,7 +282,7 @@
 
           if (!userId) {
             document.getElementById("message").innerText =
-              "Error: User ID not found in URL.";
+              "Error: Missing user ID.";
             document.getElementById("message").style.color = "red";
             return;
           }
@@ -92,7 +293,7 @@
               headers: {
                 "Content-Type": "application/json",
               },
-              body: JSON.stringify({ userId: userId }),
+              body: JSON.stringify({ userId }),
             });
 
             const data = await response.json();
@@ -106,11 +307,10 @@
               ).innerText = `Error: ${data.message}`;
               document.getElementById("message").style.color = "red";
             }
-          } catch (error) {
+          } catch (err) {
             document.getElementById("message").innerText =
-              "An error occurred while renewing the session.";
+              "Error subscribing. Try again later.";
             document.getElementById("message").style.color = "red";
-            console.error("Error:", error);
           }
         });
     </script>
